--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.kopecrad.radek.dynablaster"
-        minSdkVersion 17
+        applicationId "com.kopecrad.dynablaster"
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
