--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.GameActivity"></activity>
+        <activity
+            android:name=".activity.GameActivity"
+            android:configChanges="orientation|screenSize"></activity>
+        <activity android:name=".activity.EndActivity"></activity>
     </application>
 
 </manifest>
