--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kopecrad.dynablaster">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +22,9 @@
         </activity>
         <activity
             android:name=".activity.GameActivity"
-            android:configChanges="orientation|screenSize"></activity>
-        <activity android:name=".activity.EndActivity"></activity>
+            android:configChanges="orientation|screenSize" />
+        <activity android:name=".activity.EndActivity" />
+        <activity android:name=".activity.ScoreboardsActivity"></activity>
     </application>
 
 </manifest>
