--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+//        unitTests.all {
+//            useJUnitPlatform()
+//        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //testImplementation 'junit:junit:4.12'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
+    testImplementation 'org.mockito:mockito-core:3.12.0'
+    testImplementation "org.powermock:powermock-core:2.0.9"
     testImplementation 'junit:junit:4.12'
+    //testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
